2005-11-28  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUstep.conf.in: Use new variables for handling backslashes in
	paths.
	* GNUstep.csh.in: ditto
	* GNUstep.sh.in: ditto
	* configure.ac: Always make GNUSTEP_MAKEFILES the Library/Makefiles
	subdirectory of the sytem root.  Create new variables containing
	escaped backslashes to handle being given a backslash in a path.
	* configure: regenerate

2005-11-21  Richard Frith-Macdonald <rfm@gnu.org>

	opentool.in:
	openapp.in:
	Changed to use new GNUstep.conf configuration file to obtain the
	directories to search.

2005-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Set up a sensible default location for GNUstep.conf
	on mingw32 systems (C:\GNUstep\GNUstep.conf).
	* configure: ditto

2005-10-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Standardized the format of option help, and also
	written fairly complete help on each and every option.
	* configure: Regenerated.
	
2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make: Removed checks for GNUSTEP_*_ROOT variables
	top-level, they are now automatically and always set by
	config.make, no need to check for them here in the new system.

2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* Master/rules.make: Rewritten code that determines if this the
	top-level make invocation (in order to have the dependencies
	install: check-install-permissions all, and distclean: clean
	top-level), so that it also works when gnustep-make is invoked
	from within a makefile itself (this fixes 'make distclean' in
	gnustep-make's own Documentation/GNUmakefile).
	* common.make: Updated similar checks.
	
2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/GNUmakefile: Updated commands to create temporary
	gnustep-make installation.  Also, do not source GNUstep.sh but rely
	just on passing GNUSTEP_MAKEFILES on the make command line.

2005-10-26  Nicola Pero  <n.pero@mi.flashnet.it>
