@@ -123,13 +123,13 @@ endif
 
 move_obsolete:
 	$(EC)(echo "Moving paths from old heirarchy: "; \
-	 $(srcdir)/move_obsolete_paths.sh $(GNUSTEP_SYSTEM_ROOT) $(GNUSTEP_LOCAL_ROOT) $(GNUSTEP_USER_ROOT))
+	 $(srcdir)/move_obsolete_paths.sh "$(GNUSTEP_SYSTEM_ROOT)" "$(GNUSTEP_LOCAL_ROOT)" "$(GNUSTEP_USER_ROOT)")
 
 install: all @GNUSTEP_MOVE_OBSOLETE@
 	$(EC)(echo "Creating system domain: $(GNUSTEP_SYSTEM_ROOT)"; \
-	 $(srcdir)/create_domain_dir_tree.sh $(GNUSTEP_SYSTEM_ROOT); \
+	 $(srcdir)/create_domain_dir_tree.sh "$(GNUSTEP_SYSTEM_ROOT)"; \
 	 echo "Creating local and network dirs: $(GNUSTEP_LOCAL_ROOT), $(GNUSTEP_NETWORK_ROOT)"; \
-	$(srcdir)/mkinstalldirs $(GNUSTEP_LOCAL_ROOT) $(GNUSTEP_NETWORK_ROOT);\
+	$(srcdir)/mkinstalldirs "$(GNUSTEP_LOCAL_ROOT)" "$(GNUSTEP_NETWORK_ROOT)";\
 	 echo "Creating makefile directories in: $(makedir)"; \
 	 $(srcdir)/mkinstalldirs \
 		$(makedir) \
@@ -142,9 +142,9 @@ install: all @GNUSTEP_MOVE_OBSOLETE@
 		$(makedir)/Instance/Shared \
 		$(makedir)/Instance/Documentation)
 	$(EC)(echo "Installing GNUstep configuration file in $(GNUSTEP_CONFIG_FILE)"; \
-	 $(srcdir)/mkinstalldirs $(GNUSTEP_CONFIG_FILE_DIR); \
-	 $(INSTALL_DATA) GNUstep.conf $(GNUSTEP_CONFIG_FILE))
-	-$(EC) rm -f $(GNUSTEP_SYSTEM_ROOT)/Makefiles
+	 $(srcdir)/mkinstalldirs "$(GNUSTEP_CONFIG_FILE_DIR)"; \
+	 $(INSTALL_DATA) GNUstep.conf "$(GNUSTEP_CONFIG_FILE)")
+	-$(EC) rm -f "$(GNUSTEP_SYSTEM_ROOT)/Makefiles"
 	 $(EC)(echo "Installing gnustep-make support software"; \
 	   $(INSTALL_PROGRAM) -m 755 which_lib$(EXEEXT) \
 	     $(makedir)/$(GNUSTEP_TARGET_DIR))
